<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acrcloud.acrclouduniversalsdkdemo.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/request_radio_meta"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_radio_meta" />

            <TextView
                android:id="@+id/auto_switch_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/auto_switch_label"
                />
            <Switch
                android:id="@+id/auto_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textOff="@string/auto_switch_open"
                android:layout_marginBottom="15pt"
                android:textOn="@string/auto_switch_close"
                />

            <TextView
                android:id="@+id/volume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
